--- a/InventorySystem/Views/subCategories/Create.cshtml
+++ b/InventorySystem/Views/subCategories/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InventorySystem.Models.subCategory
 
 @{
-    ViewBag.Title = "Add SUb Category";
+    ViewBag.Title = "Add Sub-Category";
 }
 
 <h2>Create</h2>
@@ -16,9 +16,9 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.categoryID,  htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.categoryID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("categoryID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("categoryID",   null, htmlAttributes: new { @class = "form-control"})
                 @Html.ValidationMessageFor(model => model.categoryID, "", new { @class = "text-danger" })
             </div>
         </div>
